--- a/style/index.css
+++ b/style/index.css
@@ -24,6 +24,8 @@ html {
 
 body {
   font-family: Bozon;
+  -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .row, .col {
@@ -157,8 +159,18 @@ body {
     color: white;
     min-height: 30vh;
     background: #232526;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to bottom, #414345, #17191a);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #414345, #17191a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.emailInput{
+    border-radius: 100px;
+}
+
+.emailButton{
+    border-radius: 100px;
+    background-color: #2096A2;
+    border: none;
 }
 
 
