--- a/mkdocs-material/material/partials/footer.html
+++ b/mkdocs-material/material/partials/footer.html
@@ -44,11 +44,11 @@
             {{ config.copyright }}
           </div>
         {% endif %}
-        powered by
+        <!-- powered by
         <a href="https://www.mkdocs.org">MkDocs</a>
         and
         <a href="https://squidfunk.github.io/mkdocs-material/">
-          Material for MkDocs</a>
+          Material for MkDocs</a> -->
       </div>
       {% block social %}
         {% include "partials/social.html" %}
