--- a/style/index.css
+++ b/style/index.css
@@ -72,7 +72,7 @@ body {
     color: white;
     position: relative;
     margin-top: -80px;
-    min-height: 100vh;
+    min-height: 150vh;
     background: #16BFFD;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #CB3066, #16BFFD);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(45deg, #CB3066, #16BFFD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -90,6 +90,45 @@ body {
     position: absolute;
     bottom: -20;
     left: 0;
+}
+
+.mlImg{
+    height: 100px;
+    width: auto;
+}
+
+.featureArrow {
+    border-right: thin solid rgba(0, 0, 0, 0.685);
+    height: 80px;
+    width: 50%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.featurePusher{
+    padding-top: 120px;
+}
+.featureText{
+    margin-bottom: 220px;
+    width: 50%;
+    margin-left: 10vw;
+}
+
+.slideTextLeft{
+    animation: moveLeft 0.5s ease-in;
+}
+.slideTextRight{
+    animation: moveRight 0.5s ease-in;
+}
+
+@keyframes moveLeft {
+    from { margin-left: 500px; }
+    to { margin-left: 0px; }
+}
+
+@keyframes moveRight {
+    from { margin-right: 500px; }
+    to { margin-right: 0px; }
 }
 
 .madeWithExokit{
