--- a/style/index.css
+++ b/style/index.css
@@ -100,6 +100,10 @@ body {
     height: 60px;
     width: auto;
 }
+.exokitName{
+    font-family: Bison;
+    font-size: 60px;
+}
 
 .featureArrow {
     border-right: thin solid rgba(0, 0, 0, 0.685);
