--- a/style/index.css
+++ b/style/index.css
@@ -22,6 +22,14 @@ html {
   overflow-x: hidden
 }
 
+a{
+    color: black;
+}
+
+.footerLink{
+    color: white;
+}
+
 body {
   font-family: Bozon;
   -webkit-font-smoothing: antialiased;
