--- a/style/index.css
+++ b/style/index.css
@@ -19,7 +19,8 @@
 }
 
 html {
-  overflow-x: hidden
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 a{
@@ -33,8 +34,8 @@ a{
 body {
   font-family: Bozon;
   -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    overflow-x: hidden
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden
 }
 
 .row, .col {
@@ -80,7 +81,7 @@ body {
     color: white;
     position: relative;
     margin-top: -80px;
-    min-height: 150vh;
+    min-height: 160vh;
     background: #16BFFD;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #CB3066, #16BFFD);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(45deg, #CB3066, #16BFFD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -89,7 +90,7 @@ body {
 }
 
 .whatIsExokitPusher{
-    margin-top: 130px;
+    margin-top: 160px;
 }
 
 .whatIsExokitImg{
@@ -102,6 +103,7 @@ body {
 
 .mlImg, .oculusImg, .viveImg{
     height: 100px;
+    margin-bottom: 100px;
     width: auto;
 }
 .exokitImg{
@@ -117,17 +119,19 @@ body {
     border-right: thin solid rgba(0, 0, 0, 0.685);
     height: 80px;
     width: 50%;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .featurePusher{
-    padding-top: 120px;
+    padding-top: 50px;
 }
 .featureText{
-    margin-bottom: 250px;
     width: 75%;
     margin-left: 10vw;
+}
+.featureTextPusher{
+    height: 50px;
 }
 
 .slideTextLeft{
@@ -250,24 +254,30 @@ body {
         margin-bottom: 20px;
     }
 }
-@media only screen and (max-height: 1025px) {
+@media only screen and (max-width: 994px) {
     .whatIsExokitImg{
         width: auto;
         height: 300px;
     }
     .whatIsExokit{
-        -webkit-clip-path: polygon(0 0, 100% 10%, 100% 95%, 0 100%);
-        clip-path: polygon(0 0, 100% 10%, 100% 95%, 0 100%);
-        
+        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
+        clip-path: polygon(0 0, 100% 5%, 100% 98%, 0 100%);
+    }
+    .quotes{
+        -webkit-clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
     }
     .whatIsExokitPusher{
-        margin-top: 300px;
+        margin-top: 200px;
     }
-    .featureText{
-        margin-bottom: 200px;
+    .featureTextPusher{
+        height: 50px;
+    }
+    .featurePusher{
+        padding-top: 50px;
     }
     .mlImg, .viveImg, .oculusImg{
-        margin-bottom: 40px;
+        margin-bottom: 80px;
     }
     .oculusImg{
         margin-bottom: 150px;
