--- a/style/index.css
+++ b/style/index.css
@@ -25,6 +25,7 @@ html {
 
 .home a{
     color: black;
+    text-decoration: none;
 }
 
 .home .footerLink{
@@ -46,6 +47,8 @@ body {
 .home .navbar-brand {
   font-family: Bison;
   font-size: 40px;
+  display: inline-flex;
+  align-items: center;
 }
 
 .home .navbar-brand img {
@@ -55,6 +58,14 @@ body {
 
 .home .navbar-nav {
     margin-left: auto;
+}
+
+.home #bigNavbar{
+    visibility: visible;
+}
+.home #littleNavbar{
+    visibility: hidden;
+    width: 0;
 }
 
 .home #canvas {
@@ -70,7 +81,7 @@ body {
     width: 30vw; 
     height: 100%;
     top: 0; 
-    z-index: 1000;
+    z-index: 2;
 }
 
 .home .heroDL:hover{
@@ -349,5 +360,16 @@ body {
     }
     .home .featuresSpacer{
         height: 80px;
+    }
+    .home #bigNavbar{
+        visibility: hidden;
+    }
+    .home #littleNavbar{
+        visibility: visible;
+        width: 80px;
+    }
+    .home #brandName{
+        visibility: hidden;
+        width: 0;
     }
 }
