--- a/style/index.css
+++ b/style/index.css
@@ -25,11 +25,11 @@
 .home .whatIsExokit{
     position: relative;
     margin-top: -80px;
-    min-height: 130vh;
+    min-height: 350vh;
 }
 
 .home .whatIsExokitPusher{
-    margin-top: 160px;
+    margin-top: 500px;
 }
 
 .home .whatIsExokitImg{
@@ -75,7 +75,7 @@
     line-height: 1.5;
 }
 .home .featureTextPusher{
-    height: 30px;
+    height: 60vh;
 }
 
 .home .slideTextLeft{
@@ -104,6 +104,7 @@
     background: linear-gradient(120deg, #255B7F, #221962); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
     clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
+    margin-top: -15vh;
 }
 
 .home .exokitFeatures .row{
@@ -228,12 +229,6 @@
     .home .quotes{
         -webkit-clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
         clip-path: polygon(0 0, 100% 5%, 100% 100%, 0 100%);
-    }
-    .home .whatIsExokitPusher{
-        margin-top: 200px;
-    }
-    .home .featureTextPusher{
-        height: 20px;
     }
     .home .featurePusher{
         padding-top: 50px;
