--- a/style/index.css
+++ b/style/index.css
@@ -27,6 +27,7 @@
     position: relative;
     margin-top: -80px;
     min-height: 350vh;
+    color: white;
 }
 
 .home .whatIsExokitPusher{
@@ -47,7 +48,6 @@
     height: 100px;
     margin-bottom: 100px;
     width: auto;
-    filter: invert(88%);
 }
 
 .home .exokitImg{
