change HTML, smooth out gradient transition

--- a/style/index.css
+++ b/style/index.css
@@ -27,7 +27,6 @@
     position: relative;
     margin-top: -80px;
     min-height: 350vh;
-    color: white;
 }
 
 .home .whatIsExokitPusher{
@@ -48,6 +47,7 @@
     height: 100px;
     margin-bottom: 100px;
     width: auto;
+    filter: invert(88%);
 }
 
 .home .exokitImg{
@@ -124,6 +124,7 @@
 
 .home .madeWithExokit{
     position: relative;
+    color: black;
     min-height: 70vh
 }
 
