scrollX on features section now scrolls based off parent width

--- a/style/index.css
+++ b/style/index.css
@@ -110,6 +110,11 @@
     background: transparent;  
 }
 
+.home #featuresLeft img{
+    height: auto !important;
+    width: 10vw !important;
+}
+
 .home .vLine{
     border-left: 3px solid white;
     float: left;
