--- a/style/index.css
+++ b/style/index.css
@@ -8,7 +8,7 @@
     position: absolute;
     margin-top: 30vh;
     margin-left: 50px;
-    width: 30vw; 
+    width: 40vw; 
     height: 100%;
     top: 0; 
     z-index: 2;
@@ -20,6 +20,29 @@
 
 .home #heroPusher{
     margin-bottom: 180px;
+}
+
+.home #overlay-subs {
+  display: flex;
+}
+
+.home #overlay-subs .overlay-sub {
+  padding-right: 4vw;
+}
+
+.home #overlay-subs .overlay-sub .button {
+  display: flex;
+  height: 3vw;
+  border: 2px solid #000;
+  border-radius: 1000px;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.2s ease-out;
+}
+.home #overlay-subs .overlay-sub .button:hover {
+  background-color: #000;
+  color: #FFF;
+  transition: none;
 }
 
 .home .whatIsExokit{
