--- a/style/index.css
+++ b/style/index.css
@@ -71,7 +71,7 @@
 
 .home #featureMain-wrap .gradient {
     position: absolute;
-    height: 100vw;
+    height: 100vh;
     width: 100%;
     -webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
