--- a/style/index.css
+++ b/style/index.css
@@ -152,12 +152,34 @@
     width: 10vw !important;
 }
 
-.home #featuresRight h5{
-    cursor: pointer;
+.home #featuresRight{
+     display: flex;
+     flex-direction: column;
 }
 
-.home #featuresRight a h5:hover{
-    color: #fcc8ff !important;
+.home #featuresRight h5{
+    display: inline-block;
+    padding: 4px 15px;
+    background-color: transparent;
+    border: 2px solid transparent;
+    border-radius: 100px;
+    font-size: 1rem;
+    line-height: 1.6rem;
+    cursor: pointer;
+    transition: none;
+    transition: background-color 0.5s cubic-bezier(0, 1, 0, 1);
+}
+
+.home #featuresRight a h5:hover {
+    background-color: #FFF;
+    color: #2e84dc;
+    font-weight: 600;
+    transition: none;
+}
+
+.home #featuresRight a h5.active {
+    border-color: #FFF;
+    font-weight: 600;
 }
 
 .home .vLine{
