--- a/style/index.css
+++ b/style/index.css
@@ -106,6 +106,14 @@
     transform: translateZ(0);
 }
 
+.home #featureMain-wrap .gradient2 {
+  position: relative;
+  bottom: 0;
+  width: 100vw;
+  height: 30vh;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #fff 100%); 
+}
+
 .home .mlImg, .home .oculusImg, .home .viveImg{
     height: 100px;
     margin-bottom: 100px;
